# ETSInf_DTWApp

./: .gitignore  Doxyfile.in  Makefile.am  README.md  configure.ac
data/: build_data.sh  build_verify.sh
data/aux/: bufferDtw.c  doube2float.c
data/res/benchmark/: execution_float
src/: Makefile.am
src/common/: DTWCommon.h  DTWCommon_GPU.h  DTWIO.c  DTWIO.h  DTWIO_GPU.cu  DTWIO_GPU.h  DTWMalloc.c  DTWMalloc.h  kernels.cuh
src/dtw/: DTWProcess.c  DTWProcess.h  DTWProcess_GPU.cu  DTWProcess_GPU.h
src/launcher/: DTWExec_CPU.c  DTWExec_CPU.h  DTWExec_GPU.cu  DTWExec_GPU.h
src/main/: main.c
src/preproc/: DTWPreprocess.c  DTWPreprocess.h
test/: check_dtw_cpu_double.sh  check_dtw_cpu_float.sh  check_dtw_gpu.sh  performance_run_cpu.sh
